--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
   --white: #fff;
 }
 
+/* Container 容器 */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  width: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
