--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ main {
 .hero {
   position: relative;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/presidential-suite.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
